--- a/views/drycargo.ejs
+++ b/views/drycargo.ejs
@@ -38,62 +38,62 @@
                 <p><span>案例展示</span></p>
             </div>
             <div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
-            <div class="con">
+            <div class="con con_drycargo">
                 <ul class="clearfix2">
                     <li>
                         <img src="img/pinghetangAPP.jpg" />
                         <div class="txt">
-                            <h3>案例1</h3>
-                            <p>只做您想要的</p>
+                            <h3>掌尚平和堂</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/wochuAPP.png" />
                         <div class="txt">
-                            <h3>案例2</h3>
-                            <p>只做您想要的</p>
+                            <h3>我厨App</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/yikaobangAPP.png" />
                         <div class="txt">
-                            <h3>案例3</h3>
-                            <p>只做您想要的</p>
+                            <h3>微课堂</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/zhitianguijinsuAPP.png" />
                         <div class="txt">
-                            <h3>案例4</h3>
-                            <p>只做您想要的</p>
+                            <h3>智天贵金属</h3>
+                           <!-- <p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/548343850.jpg" />
                         <div class="txt">
-                            <h3>案例5</h3>
-                            <p>只做您想要的</p>
+                            <h3>中金商城</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/901980792.jpg" />
                         <div class="txt">
-                            <h3>案例6</h3>
-                            <p>只做您想要的</p>
+                            <h3>微作业</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/1159633737.jpg" />
                         <div class="txt">
-                            <h3>案例7</h3>
-                            <p>只做您想要的</p>
+                            <h3>GREEN HOUSE</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
                     <li>
                         <img src="img/1648526629.jpg" />
                         <div class="txt">
-                            <h3>案例8</h3>
-                            <p>只做您想要的</p>
+                            <h3>微校</h3>
+                            <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
 
