--- a/views/header.ejs
+++ b/views/header.ejs
@@ -43,7 +43,7 @@
             </li>
         </ul>
         <div class="phone">
-            <p class="text">4008-821-628</p>
+            <p class="text">13534231397</p>
             <p>只做您想要的！</p>
         </div>
         <div class="sun"><img src="img/sun.png"></div>
