--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,5 +1,5 @@
 <div id="footer">
-    <div class="footer clearfix">
+    <div class="footer clearfix2">
         <div class="left">
             <p>
                 <span class="contact-us hide">
