--- a/public/less/drycargo.less
+++ b/public/less/drycargo.less
@@ -51,9 +51,17 @@
 }
 
 .con_drycargo{
-  ul{
+      margin: 5px 55px!important;
+      ul.clearfix2 {
+        margin: 5px 10%!important;
+      }
+}
+ul.con_case{
+
+    text-align: center!important;
     li{
-      margin: 5px 55px;
+      float: none!important;
+      display: inline-block!important;
     }
-  }
+
 }
