--- a/routes/drycargo/drycargoInfo/case.ejs
+++ b/routes/drycargo/drycargoInfo/case.ejs
@@ -3,8 +3,8 @@
         <p><span>案例展示</span></p>
     </div>
     <div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
-    <div class="con con_drycargo">
-        <ul class="clearfix2">
+    <div class="con ">
+        <ul class="clearfix2 con_case">
             <li>
                 <img src="img/pinghetangAPP.jpg" />
                 <div class="txt">
