--- a/views/information.ejs
+++ b/views/information.ejs
@@ -25,7 +25,7 @@
 </div>
 
 
-<div class="business-content">
+<div class="business-content clearfix2">
     <div class="left-content">
         <ul>
             <li class="business selected"  data-tag="front"><a href="javascript:void(0)">前沿</a></li>
@@ -33,7 +33,7 @@
         </ul>
     </div>
     <div class="right-content">
-        <div>
+        <div class="info">
             <h2>互联网大数据支撑生态银行建设</h2>
             <p>在很多商业银行的绿色金融还停留在传统贴息贷款的模式之际，以互联网生态大数据为支撑的生态银行概念已经呼之欲出了，最为难得的是，新的理念摒弃了绿色金融只能依赖于公益发展的观点，强调了自然资源作为稀缺资本，应该建立在盈利基础上，兼顾长远发展的理念。
             </p>
