--- a/views/service.ejs
+++ b/views/service.ejs
@@ -24,7 +24,7 @@
     </ul>
 </div>
 
-<div class="business-content">
+<div class="business-content clearfix2">
     <div class="left-content">
         <ul>
             <li class="business selected"  data-tag="platform"><a href="javascript:void(0)">平台建设</a></li>
