--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -1,26 +1,29 @@
 .business-content{
-  display: flex;
+  /*display: flex;
   display: -webkit-flex;
-  flex-direction: row;
+  flex-direction: row;*/
   width: 90%;
   background-color: #eee;
   margin-top: 20px;
 }
 .left-content{
-  flex: 1;
-  -webkit-flex: 1;
+  /*flex: 1;
+  -webkit-flex: 1;*/
   background-color: #fff;
   margin-left: 30px;
   margin-right: 10px;
+  width: 15%;
+  float: left;
   ul{
     padding: 0 20px;
     li{
       height: 60px;
+      line-height: 60px;
       border-bottom: 1px solid #edf1f2;
-      display: flex;
+     /* display: flex;
       display: -webkit-flex;
       justify-content: flex-start;
-      align-items: center;
+      align-items: center;*/
       position: relative;
       &.selected{
         a{
@@ -48,13 +51,18 @@
   }
 }
 .right-content{
-  flex: 4;
-  -webkit-flex: 4;
+  /*flex: 4;
+  -webkit-flex: 4;*/
   background-color: #fff;
-  padding: 30px 100px;
-  display: flex;
+  //padding: 30px 100px;
+  /*display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
+  width: 80%;
+  float: left;
+  .info{
+    padding: 30px;
+  }
   p{
     text-indent: 24px;
     line-height: 20px;
@@ -65,3 +73,4 @@
     text-align: center;
   }
 }
+
