--- a/views/drycargo.ejs
+++ b/views/drycargo.ejs
@@ -38,9 +38,9 @@
                 <p><span>案例展示</span></p>
             </div>
             <div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
-            <div class="con con_drycargo">
-                <ul class="clearfix2">
-                    <li>
+            <div class="con">
+                <ul class="clearfix2 con_case">
+                    <li >
                         <img src="img/pinghetangAPP.jpg" />
                         <div class="txt">
                             <h3>掌尚平和堂</h3>
@@ -61,35 +61,35 @@
                             <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
-                    <li>
+                    <li >
                         <img src="img/zhitianguijinsuAPP.png" />
                         <div class="txt">
                             <h3>智天贵金属</h3>
                            <!-- <p>只做您想要的</p>-->
                         </div>
                     </li>
-                    <li>
+                    <li >
                         <img src="img/548343850.jpg" />
                         <div class="txt">
                             <h3>中金商城</h3>
                             <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
-                    <li>
+                    <li >
                         <img src="img/901980792.jpg" />
                         <div class="txt">
                             <h3>微作业</h3>
                             <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
-                    <li>
+                    <li >
                         <img src="img/1159633737.jpg" />
                         <div class="txt">
                             <h3>GREEN HOUSE</h3>
                             <!--<p>只做您想要的</p>-->
                         </div>
                     </li>
-                    <li>
+                    <li >
                         <img src="img/1648526629.jpg" />
                         <div class="txt">
                             <h3>微校</h3>
