--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1,4 +1,4 @@
-body,div,img,dl,dt,dd,ul,li,h1,h2,h3,h4,h5,h6{
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, fieldset, lengend, button, input, textarea, th, td {
     margin: 0;
     padding: 0;
 }
@@ -80,6 +80,10 @@ a {
         .text{
             font-size: 18px;
             color: #34b3e0;
+            margin-bottom: 5px!important;
+        }
+        .desc{
+            margin-top: 5px;
         }
         p{
             font-size: 13px;
