--- a/views/header.ejs
+++ b/views/header.ejs
@@ -44,7 +44,7 @@
         </ul>
         <div class="phone">
             <p class="text">13534231397</p>
-            <p>只做您想要的！</p>
+            <p class="desc">只做您想要的！</p>
         </div>
         <div class="sun"><img src="img/sun.png"></div>
     </div>
