--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,17 +1,27 @@
 body,
-div,
-img,
-dl,
-dt,
-dd,
-ul,
-li,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+hr,
+p,
+blockquote,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+fieldset,
+lengend,
+button,
+input,
+textarea,
+th,
+td {
   margin: 0;
   padding: 0;
 }
@@ -89,6 +99,10 @@ a {
 .header .phone .text {
   font-size: 18px;
   color: #34b3e0;
+  margin-bottom: 5px!important;
+}
+.header .phone .desc {
+  margin-top: 5px;
 }
 .header .phone p {
   font-size: 13px;
