--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -72,5 +72,29 @@
   h2{
     text-align: center;
   }
+  .platform{
+    margin: 30px 30px;
+    .zt_one{
+      .zt_title{
+        font-family: "Arial";
+        font-size: 24px;
+        text-transform: uppercase;
+        font-weight: 700;
+      }
+      .zt_china {
+        font-size: 21px;
+        font-weight: 700px;
+      }
+      .zt_nei {
+        font-size: 14px;
+        color: #666;
+        line-height: 28px;
+        margin-top: 20px;
+        p{
+          text-indent: 0px;
+        }
+      }
+    }
+  }
 }
 
