--- a/views/businessIntro.ejs
+++ b/views/businessIntro.ejs
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="keywords" content="深圳专业建站 网站建设 App开发 软件开发 深圳软件开发 全网营销"/>
-		<title>歪创科技-专业的建站服务</title>
+		<title>歪创科技-最具创造性稳定性的开发团队</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css" />
 		<link rel="stylesheet" type="text/css" href="css/businessIntro.css" />
 		<script src="js/jquery.min.js"></script>
@@ -23,7 +23,7 @@
 			</ul>
 		</div>
 
-		<div class="business-content">
+		<div class="business-content clearfix2">
 			<div class="left-content">
 				<ul>
 					<li class="business selected"  data-tag="companyDesc"><a href="javascript:void(0)">公司简介</a></li>
