--- a/views/service.ejs
+++ b/views/service.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="深圳专业建站 网站建设 App开发 软件开发 深圳软件开发 全网营销"/>
-    <title>歪创科技-专业的建站服务</title>
+    <title>歪创科技-最具创造性稳定性的开发团队</title>
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/businessIntro.css" />
     <script src="js/jquery.min.js"></script>
@@ -34,8 +34,19 @@
         </ul>
     </div>
     <div class="right-content">
-        <div class="logo">
+        <!-- <div class="logo">
             <img src="img/logo.jpg">
+        </div> -->
+        <div class="platform">
+            <div class="zt_one">
+                <h2 class="zt_title">Brand Website</h2>
+                <strong class="zt_china">品牌网站建设</strong>
+                <p class="zt_nei">
+                爱与众不同，爱与自己不同！歪创拥有一支业界一流的网站设计、研发、技术支持团队，将前沿技术和多年实战经验与用户的具体需求完美结合，不断超越自我，精益求精，用户的满意是给我们的最大回报。</p>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
 
     </div>
