--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -80,6 +80,7 @@
         font-size: 24px;
         text-transform: uppercase;
         font-weight: 700;
+        text-align: left;
       }
       .zt_china {
         font-size: 21px;
@@ -90,10 +91,86 @@
         color: #666;
         line-height: 28px;
         margin-top: 20px;
-        p{
-          text-indent: 0px;
+        text-indent: 0px;       
+      }
+      margin-bottom: 30px;
+    }
+    .n_p_30{
+      padding: 20px 0px;
+      border-bottom: 5px #f2f2f2 solid;
+      overflow: hidden;
+      position: relative;
+      .n_m_b_26 {
+        margin-bottom: 26px;
+        text-align: left;
+      }
+      .why_ul {
+        width: 400px;
+        &.w_f_c2{
+          background: url(../img/w_pic2.jpg) right no-repeat;
+        }
+        li{
+          font-size: 15px;
+          line-height: 40px;
+          background: #1348ae;
+          color: #fff;
+          margin-bottom: 14px;
+          -moz-border-radius: 25px;
+          -webkit-border-radius: 25px;
+          border-radius: 25px;
+          text-indent: 40px;
         }
       }
+      .women_t {
+        position: absolute;
+        top: 10px;
+        left: 230px;
+      }
+      .women_l {
+        width: 289px;
+        position: absolute;
+        top: 190px;
+        left: 0px;
+      }
+      .women_r {
+        width: 826px;
+        position: absolute;
+        top: 220px;
+        right: 0px;
+        height: 850px;
+        .wo_dl {
+          border-bottom: 1px dashed #ccc;
+          overflow: hidden;
+          padding-bottom: 15px;
+          margin-bottom: 15px;
+          dt {
+            float: right;
+          }
+          dd {
+            width: 490px;
+            float: left;
+            h2{
+              font-size: 16px;
+              font-weight: 700;
+              line-height: 40px;
+              background: #1d5ec4;
+              color: #fff;
+              -moz-border-radius: 25px;
+              -webkit-border-radius: 25px;
+              border-radius: 25px;
+              text-indent: 40px;
+              margin-bottom: 20px;
+            }
+            p{
+              font-size: 16px;
+              line-height: 28px;
+              color: #666;
+              padding-left: 30px;
+            }
+          }
+        }
+      }
+
     }
   }
 }
