--- a/views/service.ejs
+++ b/views/service.ejs
@@ -44,9 +44,100 @@
                 <p class="zt_nei">
                 爱与众不同，爱与自己不同！歪创拥有一支业界一流的网站设计、研发、技术支持团队，将前沿技术和多年实战经验与用户的具体需求完美结合，不断超越自我，精益求精，用户的满意是给我们的最大回报。</p>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="n_p_30">
+                <div style="float: left;">
+                    <h2 class="n_m_b_26">
+                        <img src="img/now4.gif" alt="品牌网站建设的优势："></h2>
+                    <ul class="why_ul ">
+                        <li>（1）网站独一无二，彰显大牌风范</li>
+                        <li>（2）设计个性化，更能吸引眼球</li>
+                        <li>（3）注重用户体验，交互等设置完善 </li>
+                        <li>（4）有利于全方位展现企业</li>
+                         <li>（5）更有利于网站SEO优化</li>
+                         <li>（6）功能更强大，扩展性更强</li>
+                       
+                    </ul>
+                </div>
+                <!-- <div style="float: right;">
+                    <img src="/templates/qeerd/images/w_pic1.jpg" alt="企迪信息技术，让您彰显不一样的自己">
+                </div> -->
+            </div>
+            <div class="n_p_30">
+                <div style="float: left;">
+                    <h2 class="n_m_b_26">
+                        <img src="img/now6.gif" alt="现在企业网站中存在哪些不足？"></h2>
+                    <ul class="why_ul w_f_c2">
+                        <li>（1）不重视网络、没有企业网站</li>
+                        <li>（2）有了好网站却白白浪费，不知道怎么利用网站</li>
+                        <li>（3）免费的优化不会做 </li>
+                        <li>（4）投入没效果还浪费钱 </li>
+                        <li>（5）眼看着竞争对手风生水起</li>
+                    </ul>
+                </div>
+                <!-- <div style="float: right;">
+                    <img src="img/w_pic2.jpg" alt="企业网站建设">
+                </div> -->
+            </div>
+            <div class="n_p_30" style="position: relative; height: 1200px;">
+                <div class="women_t unified_top" style="position: absolute; top: 47px;">
+                    <img src="img/wo_05.png" alt="企业网站建设选择我们的四大理由">
+                </div>
+                <div class="women_l unified_left" style="left: 0px; opacity: 1;">
+                    <img src="img/women1.jpg" alt="网站建设" />
+                    <img src="img/women2.jpg" alt="企业网站建设" />
+                    <img src="img/women3.jpg" alt="企业网站建设" />
+                </div>
+                <div class="women_r unified_right" style="right: 0px; opacity: 1;">
+                    <dl class="wo_dl">
+                        <dt>
+                            <img src="img/wo_01.jpg" alt="网站优化团队、技术团队"></dt>
+                        <dd>
+                            <h2>
+                                一、资深专业</h2>
+                            <p>
+                                专业的售前团队、设计团队、网站优化团队、技术团队、售后团队与您沟通，确保网站建设的进度和质量；</p>
+                        </dd>
+                    </dl>
+                    
+
+                    <dl class="wo_dl">
+                        <dt>
+                            <img src="img/wo_02.jpg" alt="内容管理系统"></dt>
+                        <dd>
+                            <h2>
+                                二、灵活的网站内容管理系统</h2>
+                            <p>
+                                支持在单服务器创建多达多个站点，每个站点能够独立进行结构调整、内容创作、内容编辑，并可独立发布静态文件，实现不同站点向不同的WEB服务器部署分发。                        </p>
+                        </dd>
+                    </dl>
+
+                    <dl class="wo_dl">
+                        <dt>
+                            <img src="img/wo_03.jpg" alt="网站安全、服务器安全"></dt>
+                        <dd>
+                            <h2>
+                                三、可靠的网站安全机制</h2>
+                            <p>
+                                服务器安全稳定，7X24小时机房人员值守，从代码编写和服务器本身的安全设置上护佑网站安全；
+                            </p>
+                        </dd>
+                    </dl>
+
+                    <dl class="wo_dl">
+                        <dt>
+                            <img src="img/wo_04.jpg" alt="网站维护、终身维护、网站运营"></dt>
+                        <dd>
+                            <h2>
+                                四、终身维护</h2>
+                            <p>
+                                我们为您的网站运营、运行一路保驾护航，终身为您提供网站后期维护服务，确保网站的正常使用；
+                            </p>
+                        </dd>
+                    </dl>
+
+
+                </div>
+        </div>
         </div>
 
     </div>
