--- a/public/css/businessIntro.css
+++ b/public/css/businessIntro.css
@@ -73,11 +73,15 @@
 .right-content .platform {
   margin: 30px 30px;
 }
+.right-content .platform .zt_one {
+  margin-bottom: 30px;
+}
 .right-content .platform .zt_one .zt_title {
   font-family: "Arial";
   font-size: 24px;
   text-transform: uppercase;
   font-weight: 700;
+  text-align: left;
 }
 .right-content .platform .zt_one .zt_china {
   font-size: 21px;
@@ -88,7 +92,81 @@
   color: #666;
   line-height: 28px;
   margin-top: 20px;
-}
-.right-content .platform .zt_one .zt_nei p {
   text-indent: 0px;
+}
+.right-content .platform .n_p_30 {
+  padding: 20px 0px;
+  border-bottom: 5px #f2f2f2 solid;
+  overflow: hidden;
+  position: relative;
+}
+.right-content .platform .n_p_30 .n_m_b_26 {
+  margin-bottom: 26px;
+  text-align: left;
+}
+.right-content .platform .n_p_30 .why_ul {
+  width: 400px;
+}
+.right-content .platform .n_p_30 .why_ul.w_f_c2 {
+  background: url(../img/w_pic2.jpg) right no-repeat;
+}
+.right-content .platform .n_p_30 .why_ul li {
+  font-size: 15px;
+  line-height: 40px;
+  background: #1348ae;
+  color: #fff;
+  margin-bottom: 14px;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  text-indent: 40px;
+}
+.right-content .platform .n_p_30 .women_t {
+  position: absolute;
+  top: 10px;
+  left: 230px;
+}
+.right-content .platform .n_p_30 .women_l {
+  width: 289px;
+  position: absolute;
+  top: 190px;
+  left: 0px;
+}
+.right-content .platform .n_p_30 .women_r {
+  width: 826px;
+  position: absolute;
+  top: 220px;
+  right: 0px;
+  height: 850px;
+}
+.right-content .platform .n_p_30 .women_r .wo_dl {
+  border-bottom: 1px dashed #ccc;
+  overflow: hidden;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+.right-content .platform .n_p_30 .women_r .wo_dl dt {
+  float: right;
+}
+.right-content .platform .n_p_30 .women_r .wo_dl dd {
+  width: 490px;
+  float: left;
+}
+.right-content .platform .n_p_30 .women_r .wo_dl dd h2 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 40px;
+  background: #1d5ec4;
+  color: #fff;
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  text-indent: 40px;
+  margin-bottom: 20px;
+}
+.right-content .platform .n_p_30 .women_r .wo_dl dd p {
+  font-size: 16px;
+  line-height: 28px;
+  color: #666;
+  padding-left: 30px;
 }
