--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -60,6 +60,12 @@
   align-items: center;*/
   width: 80%;
   float: left;
+  .content-body{
+      padding: 40px 50px;
+      p{
+        padding: 10px 0px;
+      }
+  }
   .info{
     padding: 30px;
   }
@@ -173,5 +179,14 @@
 
     }
   }
+}
+
+.flexslider{
+    height: 420px!important;
+    .slides{
+      li{
+        height: 420px!important;
+      }
+    }
 }
 
