--- a/views/information.ejs
+++ b/views/information.ejs
@@ -17,8 +17,8 @@
 <div class="flexslider">
     <ul class="slides">
 
-        <li style="background:url(img/sonpic.png) center 0 no-repeat;">
-            <a href="#"></a>
+        <li style="background:url(img/sonpic20160801.png) center 0 no-repeat;">
+            <a href="javascript:void(0);"></a>
         </li>
 
     </ul>
