--- a/views/businessIntro.ejs
+++ b/views/businessIntro.ejs
@@ -16,8 +16,8 @@
 		<div class="flexslider">
 			<ul class="slides">
 
-				<li style="background:url(img/sonpic.png) center 0 no-repeat;">
-					<a href="#"></a>
+				<li style="background:url(img/sonpic20160801.png) center 0 no-repeat;">
+					<a href="javascript:void(0);"></a>
 				</li>
 
 			</ul>
@@ -34,7 +34,7 @@
 				</ul>
 			</div>
 			<div class="right-content">
-				<div>
+				<div class="content-body">
 					<p>深圳歪创网络科技有限公司，简称歪创科技(<a href="http://www.yycon.cn">www.yycon.cn</a>)，是国内极具创新的互联网综合运营服务提供商，歪创科技是致力于网络应用技术开发与服务、企业电子商务整体解决方案的高科技企业。经过长期的稳步发展，已成为华南地区网络应用技术服务的佼佼者，在业界拥有良好的口碑，公司致力于打造专业互联网营销服务商和分类信息服务平台，为竭力成为深圳乃至全国的品牌互联网公司而努力。</p>
 					<p>服务范围：网络营销及企业信息化整体解决方案，包括：域名注册、虚拟主机、主机托管、网站建设、系统软件开发、网络网站维护、网站推广、网站优化、网络广告、电子商务咨询、服务器租用及托管服务等，区域范围涉及全国。</p>
 					<p>合作伙伴：万网、长沙电信、深圳企业网、百度、众多金融企业等。</p>
