--- a/views/service.ejs
+++ b/views/service.ejs
@@ -63,7 +63,7 @@
                 </div> -->
             </div>
             <div class="n_p_30">
-                <div style="float: left;">
+                <div style="float: left;width: 100%;">
                     <h2 class="n_m_b_26">
                         <img src="img/now6.gif" alt="现在企业网站中存在哪些不足？"></h2>
                     <ul class="why_ul w_f_c2">
@@ -82,11 +82,11 @@
                 <div class="women_t unified_top" style="position: absolute; top: 47px;">
                     <img src="img/wo_05.png" alt="企业网站建设选择我们的四大理由">
                 </div>
-                <div class="women_l unified_left" style="left: 0px; opacity: 1;">
+                <!-- <div class="women_l unified_left" style="left: 0px; opacity: 1;">
                     <img src="img/women1.jpg" alt="网站建设" />
                     <img src="img/women2.jpg" alt="企业网站建设" />
                     <img src="img/women3.jpg" alt="企业网站建设" />
-                </div>
+                </div> -->
                 <div class="women_r unified_right" style="right: 0px; opacity: 1;">
                     <dl class="wo_dl">
                         <dt>
