--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -106,12 +106,13 @@
       border-bottom: 5px #f2f2f2 solid;
       overflow: hidden;
       position: relative;
+      width: 100%;
       .n_m_b_26 {
         margin-bottom: 26px;
         text-align: left;
       }
       .why_ul {
-        width: 400px;
+        width: 100%;
         &.w_f_c2{
           background: url(../img/w_pic2.jpg) right no-repeat;
         }
@@ -124,13 +125,14 @@
           -moz-border-radius: 25px;
           -webkit-border-radius: 25px;
           border-radius: 25px;
-          text-indent: 40px;
+          //text-indent: 40px;
+          width: 350px;
         }
       }
       .women_t {
         position: absolute;
         top: 10px;
-        left: 230px;
+        left: 210px;
       }
       .women_l {
         width: 289px;
@@ -142,7 +144,8 @@
         width: 826px;
         position: absolute;
         top: 220px;
-        right: 0px;
+        //right: 0px;
+        left: 20px;
         height: 850px;
         .wo_dl {
           border-bottom: 1px dashed #ccc;
