--- a/routes/drycargo/drycargoInfo/case.ejs
+++ b/routes/drycargo/drycargoInfo/case.ejs
@@ -5,63 +5,161 @@
     <div class="subtitle">眼见为实，我们做的每一份都有记录，让客户亲眼见证质量，不忘初心的企业理念</div>
     <div class="con ">
         <ul class="clearfix2 con_case">
-            <li>
-                <img src="img/pinghetangAPP.jpg" />
-                <div class="txt">
-                    <h3>掌尚平和堂</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/wochuAPP.png" />
-                <div class="txt">
-                    <h3>我厨App</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/yikaobangAPP.png" />
-                <div class="txt">
-                    <h3>微课堂</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/zhitianguijinsuAPP.png" />
-                <div class="txt">
-                    <h3>智天贵金属</h3>
-                    <!-- <p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/548343850.jpg" />
-                <div class="txt">
-                    <h3>中金商城</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/901980792.jpg" />
-                <div class="txt">
-                    <h3>微作业</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/1159633737.jpg" />
-                <div class="txt">
-                    <h3>GREEN HOUSE</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
-            <li>
-                <img src="img/1648526629.jpg" />
-                <div class="txt">
-                    <h3>微校</h3>
-                    <!--<p>只做您想要的</p>-->
-                </div>
-            </li>
+                    <li >
+                        <img src="img/pinghetangAPP.jpg" />
+                        <div class="txt">
+                            <h3>掌尚平和堂</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/wochuAPP.png" />
+                        <div class="txt">
+                            <h3>我厨App</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/yikaobangAPP.png" />
+                        <div class="txt">
+                            <h3>艺考帮</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/zhitianguijinsuAPP.png" />
+                        <div class="txt">
+                            <h3>智天贵金属</h3>
+                           <!-- <p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/548343850.jpg" />
+                        <div class="txt">
+                            <h3>中金商城</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/901980792.jpg" />
+                        <div class="txt">
+                            <h3>校信通</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/1159633737.jpg" />
+                        <div class="txt">
+                            <h3>GREEN HOUSE</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/1648526629.jpg" />
+                        <div class="txt">
+                            <h3>微校</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/bingzhousuiwu.png" />
+                        <div class="txt">
+                            <h3>滨州税务局</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/hedanyiyao.png" />
+                        <div class="txt">
+                            <h3>合丹医药系统</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li>
+                        <img src="img/hechawang.jpg" />
+                        <div class="txt">
+                            <h3>和茶网</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/huishenghuo.jpg" />
+                        <div class="txt">
+                            <h3>荟生活</h3>
+                           <!-- <p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/jiankangmenhu.png" />
+                        <div class="txt">
+                            <h3>健康门户</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/jujiawuyou.jpg" />
+                        <div class="txt">
+                            <h3>居家无忧</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/goplayshop.jpg" />
+                        <div class="txt">
+                            <h3>趣玩商城</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/happydai.png" />
+                        <div class="txt">
+                            <h3>开心贷</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/foodcureweb.png" />
+                        <div class="txt">
+                            <h3>食疗官网</h3>
+                           <!-- <p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/shumashop.png" />
+                        <div class="txt">
+                            <h3>数码商城</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/taikangrenshou.png" />
+                        <div class="txt">
+                            <h3>泰康人寿</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/taikangonlineapp.jpg" />
+                        <div class="txt">
+                            <h3>泰康在线APP</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/yunnanbaosui.png" />
+                        <div class="txt">
+                            <h3>云南保兑仓储公司易货平台</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
+                    <li >
+                        <img src="img/changshawenhua.png" />
+                        <div class="txt">
+                            <h3>长沙文化产业投融资项目管理系统</h3>
+                            <!--<p>只做您想要的</p>-->
+                        </div>
+                    </li>
 
-        </ul>
+                </ul>
     </div>
 </div>
