--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -132,7 +132,8 @@
       .women_t {
         position: absolute;
         top: 10px;
-        left: 210px;
+        left: 50%;
+        margin-left: -250px;
       }
       .women_l {
         width: 289px;
@@ -144,9 +145,9 @@
         width: 826px;
         position: absolute;
         top: 220px;
-        //right: 0px;
-        left: 20px;
+        left: 50%;
         height: 850px;
+        margin-left: -413px;       
         .wo_dl {
           border-bottom: 1px dashed #ccc;
           overflow: hidden;
@@ -182,6 +183,74 @@
 
     }
   }
+  .guyuleft{
+    width: 80%;
+    margin: 20px auto;
+    h3{
+      font-size: 18px;
+    }
+    .text-primary {
+      color: #428bca;
+    }
+    .page-header{
+      height: 40px;
+      line-height: 40px;
+    }
+    p{
+      margin-bottom: 10px;
+    }
+    .font32 {
+      font-size: 22px !important;
+      line-height: 1.8;
+    }
+    .table-bordered {
+      border: 1px solid #ddd;
+    }
+    .table {
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 20px;
+        background-color: transparent;
+        font-size: 14px;
+        
+    }
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+        display: table;
+        tr{
+          td{
+            font-size: 14px;
+            color: #5D5D5D;
+            padding: 8px;
+            line-height: 1.42857143;
+            vertical-align: top;
+            border: 1px solid #ddd;
+            //border-top: 1px solid #ddd;
+            font-family: "Microsoft YaHei";
+            text-align: center;
+          }
+        }
+    }
+    .marginTop15 {
+        margin-top: 15px !important;
+        .marginBot15 {
+            margin-bottom: 15px!important;
+        }
+    }
+    .alert-success {
+        color: #3c763d;
+        background-color: #dff0d8;
+        border-color: #d6e9c6;
+    }
+    .alert {
+        padding: 15px;
+        margin-bottom: 20px;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
+  }
 }
 
 .flexslider{
@@ -192,4 +261,3 @@
       }
     }
 }
-
