--- a/routes/service/serviceInfo/software.ejs
+++ b/routes/service/serviceInfo/software.ejs
@@ -1,5 +1,103 @@
-<div>
-    <div class="logo">
-        <img src="img/logo.jpg">
-    </div>
+<div class="guyuleft">
+	<h3 class="page-header text-primary">软件定制开发、系统定制开发</h3>
+	<p class="lead font32">
+		&nbsp; &nbsp; 我们致力于软件的定制开发，并力争成为您的忠实的软件开发部门，无论您是想要公司内部管理软件，还是销售管理、售后管理、生产管理、业务管理、甚至面向硬件等任何特殊需求，我们都能定制开发。
+	</p>
+	<p class="lead font32">
+		&nbsp; &nbsp; 基于我们优秀的需求分析和产品规划团队，您的需求我们能快速的理解；同时基于广泰创联成熟的底层系统，软件开发的效率大大提高，开发成本也大幅降低。如果您想了解您需求到底需要多少费用，请直接联系我们。电话：<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=616083953&amp;site=qq&amp;menu=yes">13534231397</a>。
+	</p>
+
+	<h3 class="page-header text-primary">我们为企业提供以下定制化系统开发：</h3>
+
+	<table class="table table-bordered">
+		<tbody><tr>
+			<td>进销存系统软件</td>
+			<td>客户关系管理系统软件</td>
+			<td>项目管理系统软件</td>
+			<td>分销管理系统软件</td>
+		</tr>
+		<tr>
+			<td>工作流表单系统软件</td>
+			<td>单据签核管理系统软件</td>
+			<td>人事管理系统软件</td>
+			<td>薪资管理系统软件</td>
+		</tr>
+		<tr>
+			<td>物流管控系统软件</td>
+			<td>会议申请与安排管理系统软件</td>
+			<td>绩效考核系统软件</td>
+			<td>目标管理系统软件</td>
+		</tr>
+		<tr>
+			<td>信息发布管理系统软件</td>
+			<td>实时交流管理系统软件</td>
+			<td>车辆管理系统软件</td>
+			<td>考勤管理系统软件</td>
+		</tr>
+		<tr>
+			<td>公文流转系统软件</td>
+			<td>考试培训系统软件</td>
+			<td>知识管理系统软件</td>
+			<td>订单管理系统软件</td>
+		</tr>
+	</tbody></table>
+	<h3 class="page-header text-primary">
+		软件开发之甲方原则
+	</h3>
+	<p style="font-family:Tahoma;font-size:14px;color:#333333;background-color:#FFFFFF;">
+		<span style="font-family:'Microsoft YaHei';font-size:16px;"><span style="font-size:16px;">作为互联网时代的新方法，必须以用户思维为核心，立足于用户体验。所以广泰法中包含了广泰软件开发甲方原则。</span></span> 
+	</p>
+	<p style="font-family:Tahoma;font-size:14px;color:#333333;background-color:#FFFFFF;">
+		<strong>【歪创软件开发甲方原则】</strong><span style="font-family:'Microsoft YaHei';"></span> 
+	</p>
+	<ul class=" list-paddingleft-2" style="font-family:Tahoma;font-size:14px;color:#333333;background-color:#FFFFFF;">
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				1、无论怎么做，必须我们满意才行。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				2、从头到尾我们都要看到系统什么样，我们才能提最详细的需求、建议。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				3、增加工作量的功能我们不要，够用就行了。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				4、我们会及时的体验、试用，你们也要快速提供、修改。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				5、项目要快，可以提前，绝对不能延误。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				6、不要只用PPT来应付我们，我们要有实际意义的结果。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				7、我们尽量努力做到需求不变。
+			</p>
+		</li>
+		<li style="font-family:'Microsoft YaHei';">
+			<p>
+				8、很多时候我们也不是很清楚要做什么，需要你们引导我们。
+			</p>
+			<div>
+				<br>
+			</div>
+		</li>
+	</ul>
+	<div class="alert-success marginTop15 alert">
+		<h4 class="marginBot15" style="text-align:center;">		让天下没有难用的软件
+		</h4>
+		“一切始于您真实需求”是我们的口号。从客户的使用方便出发，为客户着想以解决实际问题，广泰创联立志成为客户的合作伙伴而非一个普通的系统开发商。我们使命就是通过持续创新，为客户提供卓越的系统开发服务。
+	</div>
 </div>
