--- a/public/less/common.less
+++ b/public/less/common.less
@@ -592,3 +592,10 @@ div.sign_in_up{
 .hide{
     display: none;
 }
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: inherit;
+}
