--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -251,6 +251,55 @@
     }
 
   }
+  .row{
+    width: 80%;
+    margin: 0 auto;
+    
+    .solu_con {
+      border-right: 1px solid #ccc;
+      font-size: 14px;
+      color: #666;
+      line-height: 28px;
+      padding-top: 30px;
+      margin-bottom: 40px;
+      h1{
+        font-family: inherit;
+        font-weight: 500;
+        line-height: 1.1;
+        color: inherit;
+      }
+      p{
+        font-size: 14px;
+        color: #666;
+        line-height: 28px;
+        text-indent: 0px;
+      }
+      .so_dl {
+          padding: 20px 0px;
+      }
+      .row2 {
+          margin-right: -15px;
+          margin-left: -15px;
+          border-top: 1px dashed #000;
+          .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+            float: left;
+          }
+          .word-desc{
+            width: 65%;
+            padding-right: 3px;
+          }
+      }
+      .row2:last-of-type{
+          border-bottom: 1px dashed #000;
+      }
+      .row2:after{
+        display: block;
+        content: '';
+        clear: both;
+      }
+
+    }
+  }
 }
 
 .flexslider{
