--- a/routes/service/serviceInfo/appdesign.ejs
+++ b/routes/service/serviceInfo/appdesign.ejs
@@ -1,5 +1,60 @@
-<div>
-    <div class="logo">
-        <img src="img/logo.jpg">
-    </div>
-</div>
+
+  <div class="row"> 
+
+   <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 solu_con ie7_n_c_l"> 
+    <h1> 原生app解决方案 </h1> 
+    <p> 所谓移动互联网时代的企业痛处，即顾客难留住，渠道难掌握，最终导致的结果则是利润难保证。而传统企业 “痛处”与其发展现状密切相关。在前几年“阿里”电子商务大热的时候，传统企业和品牌的线下生意遭遇“围堵”，而各企业刚刚学会B2C，手机移动互联网市场的热潮便不期而遇。<br /> 正是因为这样一块巨大的市场，使得越来越多的传统企业和品牌对移动互联网的到来表示出了更多的关注，越来越多的企业逐步建立了自己的APP“自媒体平台”。综上所述，对企业而言APP已经是大势所趋。要想在接下来的移动互联网时代不致掉队，企业唯有是适应它，而不是墨守成规。<br /> &nbsp;我们拥有丰富的APP开发与制作经验，对于不同行业与领域的APP有不同的关注点和解决方案。 </p> 
+    <p class="s_b_b_m"> 
+      <img class="img-responsive" src="img/201411031404130795.jpg" /> 
+    </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> 
+      <p> <img class="img-responsive" src="img/201411031404132915.jpg" /> </p> 
+     </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>电子商务</strong>移动电子商务是电商们的新战场，现在投资电子商务，更应是快人一步，步步领先。在移动支付、智能手机普及、手机上网速度大幅得升的时代，通过APP应用来实现电子商务，是电商们的新高地。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404134545.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2  word-desc"> <p> <strong>电子政务</strong><span style="color:#000;font-size:15px;font-weight:bold;">政务公开的下一站：手机电子政务</span><br /> 越来越多的一线城市、地方政府开始移动电子政务，通过开发政务APP应用，实现独立业务流的小、快、多的高效政务办公模式。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404136146.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>媒体资讯</strong>媒体资讯行业是处在人们越来越多的碎片化时间的行业，一个好的APP应用更能符合现在的人们消费媒体、资讯的需求。媒体服务商正通过APP应用向客户提供图片、新闻、快讯、社交等个性化服务，以最大化现代人的碎片化时间。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404137646.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>服装时尚</strong>美容美发行业是一个时尚消费行业，越来越多的连锁巨头通过APP应用向客户提供个性化服务，包含对VIP、会员提供最新发型的选择、自拍试型、手机预约等。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404139206.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>移动办公</strong>跨地区运营，跨国连锁、跨国经营，多元化企业发展的今天，移动办公已成为中大型企业必须部署的办公新方式。众多企业已通过APP应用实现企业办公业务逻辑、核心经营业务逻辑等部署，完成了从PC办公向手机移动办公的迁移。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404140686.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>汽车4s店</strong>汽车4S店的销售工作更具创新，从电话营销到电话、到微电影等，但是这些方式所能传播的信息量、用户粘着度都比较低。<br /> APP应用对于汽车4S店来将是一场销售的革命，通过开发在线选车、在线看车、在线预约试驾、在线预约保养等一系列的功能开发，使4S店能在碎片化时间对汽车消费者进行营销。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404142616.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>婚纱摄影行业</strong>看看婚恋网站、交友网站、征婚节目有多么火，就知道婚纱摄影有很大的市场。<br /> APP应用将帮助各个婚纱影楼更早一步、更进一步的接触现在的80后、90后适婚青年，通过在线预约、在线选片、在线选摄影师、在线选景等一系列功能，展开移动营销。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404144776.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>医疗健康行业</strong>据不完全统计，超过50%的智能手机用户会利用碎片化时间来下载、安装、访问健康医疗类的APP应用。<br /> 医疗健康类的APP应用将帮助企业更多的与智能手机用户、中高端的家庭用户联系在一起，通过手机问医、手机健康测试、手机排号、手机病历、手机支付等来实现对广大消费者的健康服务。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+    <ul class="row2 so_dl list-paddingleft-2"> 
+     <li class="col-lg-5 col-md-5 col-sm-4 col-xs-12 ie7_img1"> <p> <img class="img-responsive" src="img/201411031404146326.jpg" /> </p> </li> 
+     <li class="col-lg-7 col-md-7 col-sm-8 col-xs-12 ie7_img2 word-desc"> <p> <strong>美容美发</strong>美容美发行业是一个时尚消费行业，越来越多的连锁巨头通过APP应用向客户提供个性化服务，包含对VIP、会员提供最新发型的选择、自拍试型、手机预约等。 </p> </li> 
+    </ul> 
+    <p class="cleardiv s_b_b_m"> <br /> </p> 
+   </div> 
+   
+  </div>
+ 
