--- a/public/css/businessIntro.css
+++ b/public/css/businessIntro.css
@@ -4,7 +4,7 @@
   flex-direction: row;*/
   width: 90%;
   background-color: #eee;
-  margin-top: 20px;
+  margin: 0 auto;
 }
 .left-content {
   /*flex: 1;
@@ -66,6 +66,9 @@
 }
 .right-content .info {
   padding: 30px;
+}
+.right-content .info p {
+  line-height: 2;
 }
 .right-content p {
   text-indent: 24px;
@@ -300,8 +303,49 @@
   content: '';
   clear: both;
 }
+.right-content .ul-t {
+  width: 80%;
+  margin: 0 auto;
+}
+.right-content .ul-t ul li {
+  list-style-type: none;
+  position: relative;
+  height: 100%;
+  border-bottom: 1px dashed #000;
+}
+.right-content .ul-t ul li .li-top {
+  padding: 25px 0 0 0;
+  text-align: center;
+}
+.right-content .ul-t ul li .li-top h5 {
+  color: #666;
+  font-size: 24px;
+  line-height: 38px;
+  position: relative;
+  z-index: 2;
+}
+.right-content .ul-t ul li .li-top p {
+  color: #999;
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 5px;
+  position: relative;
+  z-index: 2;
+}
+.right-content .ul-t ul li .li-top .li-a {
+  position: relative;
+  z-index: 2;
+}
+.right-content .ul-t ul li .li-top .li-a a {
+  color: #7cb342;
+  font-size: 14px;
+  margin-right: 50px;
+  cursor: default;
+  line-height: 25px;
+}
 .flexslider {
   height: 420px!important;
+  margin-bottom: 20px;
 }
 .flexslider .slides li {
   height: 420px!important;
