--- a/public/less/businessIntro.less
+++ b/public/less/businessIntro.less
@@ -4,7 +4,7 @@
   flex-direction: row;*/
   width: 90%;
   background-color: #eee;
-  margin-top: 20px;
+  margin: 0 auto;
 }
 .left-content{
   /*flex: 1;
@@ -68,6 +68,9 @@
   }
   .info{
     padding: 30px;
+    p{
+      line-height: 2;
+    }
   }
   p{
     text-indent: 24px;
@@ -300,10 +303,54 @@
 
     }
   }
+  .ul-t{
+    width: 80%;
+    margin: 0 auto;
+    ul{
+      li{
+        list-style-type: none;
+        position: relative;
+        height: 100%;
+        border-bottom: 1px dashed #000;
+        .li-top {
+            padding: 25px 0 0 0;
+            text-align: center;
+            h5{
+              color: #666;
+              font-size: 24px;
+              line-height: 38px;
+              position: relative;
+              z-index: 2;
+            }
+            p{
+              color: #999;
+              font-size: 14px;
+              line-height: 22px;
+              margin-bottom: 5px;
+              position: relative;
+              z-index: 2;
+            }
+            .li-a{
+              position: relative;
+              z-index: 2;
+              a{
+                color: #7cb342;
+                font-size: 14px;
+                margin-right: 50px;
+                cursor: default;
+                line-height: 25px;
+              }
+            }
+        }
+        
+      }
+    }
+  }
 }
 
 .flexslider{
     height: 420px!important;
+    margin-bottom: 20px;
     .slides{
       li{
         height: 420px!important;
