--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,24 +6,24 @@
             <li class="drop-menu-effect"><a href="/service"><span>服务<i class="arrow"></i></span></a>
                 <ul class="submenu">
                     <!--平台建设、软件开发、APP设计、全网营销-->
-                    <li><a href="/service" data-tag="platform">平台建设</a></li>
-                    <li><a href="/service" data-tag="software">软件开发</a></li>
-                    <li><a href="/service" data-tag="appdesign">APP设计</a></li>
-                    <li><a href="/service" data-tag="webmarket">全网营销</a></li>
+                    <li><a href="/servicepage?tag=platform" data-tag="platform">平台建设</a></li>
+                    <li><a href="/servicepage?tag=software" data-tag="software">软件开发</a></li>
+                    <li><a href="/servicepage?tag=appdesign" data-tag="appdesign">APP设计</a></li>
+                    <li><a href="/servicepage?tag=webmarket" data-tag="webmarket">全网营销</a></li>
                 </ul>
             </li>
             <li class="drop-menu-effect"><a href="/information"><span>资讯<i class="arrow"></i></span></a>
                 <!--前沿、公告-->
                 <ul class="submenu">
-                    <li><a href="/information" data-tag="front">前沿</a></li>
-                    <li><a href="/information" data-tag="notice">公告</a></li>
+                    <li><a href="/informationpage?tag=front" data-tag="front">前沿</a></li>
+                    <li><a href="/informationpage?tag=notice" data-tag="notice">公告</a></li>
 
                 </ul>
             </li>
             <li class="drop-menu-effect"><a href="/drycargo"><span>干货<i class="arrow"></i></span></a>
                 <ul class="submenu">
-                    <li><a href="/drycargo" data-tag="case">案例</a></li>
-                    <li><a href="/drycargo" data-tag="cooperation">合作</a></li>
+                    <li><a href="/drycargopage?tag=case" data-tag="case">案例</a></li>
+                    <li><a href="/drycargopage?tag=cooperation" data-tag="cooperation">合作</a></li>
 
                 </ul>
             </li>
