--- a/views/information.ejs
+++ b/views/information.ejs
@@ -28,11 +28,20 @@
 <div class="business-content clearfix2">
     <div class="left-content">
         <ul>
+            <%if(tag){%>
+            <li class="business <%if(tag == 'front'){%> selected<%}%>"  data-tag="front"><a href="javascript:void(0)">前沿</a></li>
+            <%}else{%>
             <li class="business selected"  data-tag="front"><a href="javascript:void(0)">前沿</a></li>
-            <li class="business " data-tag="notice"><a href="javascript:void(0)">公告</a></li>
+            <%}%>
+            <li class="business <%if(tag == 'notice'){%> selected<%}%>" data-tag="notice"><a href="javascript:void(0)">公告</a></li>
         </ul>
     </div>
     <div class="right-content">
+        <%if(tag == 'front'){%>
+        <%include inform/front.ejs%>
+        <%}else if(tag == 'notice'){%>
+        <%include inform/notice.ejs%>
+        <%}else{%>
         <div class="info">
             <h2>互联网大数据支撑生态银行建设</h2>
             <p>在很多商业银行的绿色金融还停留在传统贴息贷款的模式之际，以互联网生态大数据为支撑的生态银行概念已经呼之欲出了，最为难得的是，新的理念摒弃了绿色金融只能依赖于公益发展的观点，强调了自然资源作为稀缺资本，应该建立在盈利基础上，兼顾长远发展的理念。
@@ -56,6 +65,8 @@
             <p>在国资委商业科技质量中心研究员罗天昊看来，“有数据，无争议”。他认为，“借助大数据评估生态系统变化带来的商机与风险，可以形成绿色金融的基础。为个人、企业和当地政府提供投资、融资渠道，以及各种绿色金融产品组合形式，推动社会资本参与的自然资本投资模式。在企业、个人和政府间共同分担环境治理责任，是未来新经济的两大核心。”</p>　
             　　
         </div>
+        <%}%>
+
 
     </div>
 
