--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,10 @@
 <div id="header" class="scrolltop">
     <div class="header clearfix">
-        <div class="logo"><img src="img/logo.jpg"></div>
+        <div class="logo">
+            <a href="/">
+                <img src="img/logo.jpg">
+            </a>
+        </div>
         <ul class="nav clearfix">
             <li class="drop-menu-effect"><a href="/" class="selected2"><span>首页</span></a></li>
             <li class="drop-menu-effect"><a href="/service"><span>服务<i class="arrow"></i></span></a>
