--- a/views/information.ejs
+++ b/views/information.ejs
@@ -28,7 +28,7 @@
 <div class="business-content clearfix2">
     <div class="left-content">
         <ul>
-            <%if(tag){%>
+            <%if(tag != '0'){%>
             <li class="business <%if(tag == 'front'){%> selected<%}%>"  data-tag="front"><a href="javascript:void(0)">前沿</a></li>
             <%}else{%>
             <li class="business selected"  data-tag="front"><a href="javascript:void(0)">前沿</a></li>
