--- a/views/service.ejs
+++ b/views/service.ejs
@@ -27,7 +27,7 @@
 <div class="business-content clearfix2">
     <div class="left-content">
         <ul>
-            <%if(tag){%>
+            <%if(tag != '0'){%>
             <li class="business <%if(tag == 'platform'){%> selected<%}%>"  data-tag="platform"><a href="javascript:void(0)">平台建设</a></li>
             <%}else{%>
             <li class="business selected"  data-tag="platform"><a href="javascript:void(0)">平台建设</a></li>
