--- a/public/less/common.less
+++ b/public/less/common.less
@@ -67,6 +67,7 @@ a {
             height: 50px;
             width: auto;
             display: block;
+            border:none;
         }
     }
     .phone {
