--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
 
-	<head>
-		<meta charset="utf-8" />
-		<meta name="keywords" content="深圳专业建站 网站建设 App开发 软件开发 深圳软件开发 全网营销"/>
-		<title>歪创科技-最具创造性稳定性的开发团队</title>
-		<link rel="stylesheet" type="text/css" href="css/common.css" />
+		<% include browser-header.ejs %>
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.vticker.js" type="text/javascript" charset="utf-8"></script>
@@ -132,9 +126,9 @@
 						</div>
 					</li>
 					<li>
-						<img src="img/zhitianguijinsuAPP.png" />
+						<img src="img/taikangrenshou.png" />
 						<div class="txt">
-							<h3>智天贵金属</h3>
+							<h3>泰康人寿</h3>
 							<p>只做您想要的</p>
 						</div>
 					</li>
