--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="keywords" content="深圳专业建站 网站建设 App开发 软件开发 深圳软件开发 全网营销"/>
-    <title>歪创科技-最具创造性稳定性的开发团队</title>
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
+<% include browser-header.ejs %>
     <link rel="stylesheet" type="text/css" href="css/businessIntro.css" />
     <script src="js/jquery.min.js"></script>
     <script src="js/service/index.js"></script>
