--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -10,7 +10,7 @@
                 <a href="/business"> 管理团队</a> <span></span>
                 <a href="/business">品牌合作</a>
             </p>
-            <p>Copyright ©yycon.cn All Rights Reserved. </p>
+            <p>Copyright ©yycon.cn All Rights Reserved.<br /><a href="http://www.miitbeian.gov.cn/">粤ICP备16071349号</a></p>
         </div>
         <div class="center"><img src="img/f_logo.png"></div>
         <div class="right">
